# Nomad

./: .gitignore  ffmpeg_plays.py  opencv_plays.py  pyproject.toml  ruff.toml  scheduler.sh  telegram_plays.py  yolo_plays.py
app/: log_config.py  main.py  settings.py
app/modules/: capture.py  detect.py  notify.py
nomad/: __main__.py  log_config.py  session.py  settings.py  standby.py
nomad/modules/: capture.py  detect.py  notify.py
